auto_branch_pushes/kkimdev-deploy/base/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: ppluto-homepage-service
spec:
  selector:
    app: ppluto-homepage
  ports:
    - name: web
      port: 80
      protocol: TCP
      targetPort: 3000
