auto_branch_pushes/kkimdev-deploy/base/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: GatewayClass
metadata:
  name: eg
spec:
  controllerName: gateway.envoyproxy.io/gatewayclass-controller
---

# https://istio.io/latest/docs/tasks/traffic-management/ingress/gateway-api/
kind: Gateway
apiVersion: gateway.networking.k8s.io/v1beta1
metadata:
  name: ppluto-main-gateway
#   annotations:
#     cert-manager.io/cluster-issuer: selfsigned-cluster-issuer
    # TODO: Use let's encrypt once it works with self signing.
#     cert-manager.io/cluster-issuer: letsencrypt
spec:
  gatewayClassName: eg
  listeners:
    - name: http
      protocol: HTTP
      port: 80
# ---
#   gatewayClassName: eg
# #   gatewayClassName: istio
# #   gatewayClassName: my-gateway-class
#   listeners:
#     - name: http-web
#       port: 80
#       protocol: HTTP
#       hostname: app-test.ppluto.dev
#       allowedRoutes:
#         namespaces:
#           from: All
#       tls: {}
#       tls:
#         mode: Terminate
#         certificateRefs:
#           - kind: Secret
#             name: app-test-ppluto-dev-cert
#             group: core

    # # TODO: This doesn't work and don't know why :/.
    # - name: https-web
    #   port: 443
    #   protocol: HTTPS
    #   hostname: app-test.ppluto.dev
    #   tls:
    #     mode: Terminate
    #     certificateRefs:
    #       - kind: Secret
    #         name: app-test-ppluto-dev-cert
    #         group: core
    #   allowedRoutes:
    #     namespaces:
    #       from: All

---
kind: HTTPRoute
apiVersion: gateway.networking.k8s.io/v1beta1
metadata:
  name: http-web-route
spec:
  parentRefs:
    - name: ppluto-homepage-gateway
      sectionName: http-web
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: ppluto-homepage-service
          port: 80

# ---
# kind: HTTPRoute
# apiVersion: gateway.networking.k8s.io/v1alpha2
# metadata:
#   name: https-web-route
# spec:
#   parentRefs:
#     - name: ppluto-main-gateway
#       sectionName: https-web
#   rules:
#     - matches:
#         - path:
#             type: PathPrefix
#             value: /
#       backendRefs:
#         - name: ppluto-main-service
#           port: 80

# ---
# kind: HTTPRoute
# apiVersion: gateway.networking.k8s.io/v1alpha2
# metadata:
#   name: grpc-web-route
# spec:
#   parentRefs:
#     - name: ppluto-main-gateway
#       sectionName: grpc-web
#   rules:
#     - matches:
#         - path:
#             type: PathPrefix
#             value: /
#       backendRefs:
#         - name: ppluto-main-service
#           port: 82

# ---
# # TODO: Migrate to letsencrypt and remove.
# # https://cert-manager.io/docs/configuration/selfsigned/
# kind: ClusterIssuer
# apiVersion: cert-manager.io/v1
# metadata:
#   name: selfsigned-cluster-issuer
# spec:
#   selfSigned: {}

# ---
# # https://cert-manager.io/docs/configuration/acme/
# kind: ClusterIssuer
# apiVersion: cert-manager.io/v1
# metadata:
#   name: letsencrypt
# spec:
#   acme:
#     email: info@projectpluto.co
#     server: https://acme-v02.api.letsencrypt.org/directory
#     privateKeySecretRef:
#       name: letsencrypt-cluster-issuer-private-key-secret-ref
#     solvers:
#       - http01:
#           gatewayHTTPRoute:
#             parentRefs:
#               - name: ppluto-main-gateway
#                 kind: Gateway
